# cookiecutter_template

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: pyproject.toml  readme.md
{{cookiecutter.project_name}}/docs/: installation.rst
